--- a/acad_resources/index.html
+++ b/acad_resources/index.html
@@ -234,6 +234,17 @@ right: 0px; }
   </style>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
+  
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-3SNTQ2TWL1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-3SNTQ2TWL1');
+</script>
+
 <body>
 
   <nav><a href="https://www.iitk.ac.in/counsel/">Course Repository</a>  <button id="darkModeToggle" ><img src="static/sun.webp" alt="" style="width: 48px;"></button></nav>
