--- a/acad-repo/index.html
+++ b/acad-repo/index.html
@@ -63,7 +63,11 @@
       flex-wrap:wrap;
     }
     nav img{height:40px;flex-shrink:0}
-    .nav-title{flex:1;min-width:200px;font-size:1.1rem}
+    .nav-title{flex:1;min-width:200px;font-size:1.1rem;text-align: center;}
+    .logo-title{
+      display: flex;
+      flex:1;
+    }
     .theme-toggle{
       border:1px solid rgba(255,255,255,.6);
       background:rgba(255,255,255,.15);
@@ -180,8 +184,8 @@
     .course-tile{
       display:grid;
       grid-template-rows:1fr 1fr;
-      height:220px;
-      border-radius:6px;
+      height:260px;
+      border-radius:8px;
       box-shadow:var(--shadow);
       overflow:hidden;
       border:1px solid var(--border);
@@ -193,7 +197,7 @@
       align-items:center;
       justify-content:center;
       font-weight:800;
-      font-size:1.15rem;
+      font-size:1.25rem;
       text-align:center;
       padding:16px;
     }
@@ -441,8 +445,8 @@
       gap:12px;
     }
     .credits-avatars .avatar{
-      width: 160px;
-      height:160px;
+      width: 100px;
+      height:100px;
       border-radius:50%; 
       object-fit:cover;
       border:var(--avatar-ring) solid rgba(255,255,255,.90);
@@ -611,8 +615,12 @@
 <body>
   <!-- Navbar -->
   <nav>
-    <img src="static/logo.png" alt="ICS Logo"/>
-    <div class="nav-title">ICS Academic Repository</div>
+    <!-- <div class="logo-title"> -->
+      <a href="/"><img src="static/logo.png" alt="ICS Logo"/></a>
+      <a href="/" class="nav-title" style="text-decoration:none;color:inherit">
+        Centralized Academic Repository
+      </a>
+    <!-- </div> -->
     <button id="themeToggle" class="theme-toggle" aria-label="Toggle dark mode">🌙 Dark</button>
   </nav>
 
